@@ -5,6 +5,8 @@ ChangeLog
 
 SVN TRUNK
 
+- Preset file icon and mimetype now introduced.
+
 - A brand new icon drops the lamest old-schooler's out, in a
   master lesson taught by Jarle Richard Akselsen, thanks.
 
